--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,15 @@ ul {
 
 /* Footer */
 .footer {
-  background: #333;
+  background: #0a0a0af3;
   color: #fff;
   padding: 10px 0;
   text-align: center;
-  position: absolute;
+  position:sticky;
   width: 100%;
   bottom: 0;
+
+
 }
 
 .footer p {
